--- a/stats-preview-card-component-main/style.css
+++ b/stats-preview-card-component-main/style.css
@@ -211,3 +211,112 @@ main {
    
     
 }
+
+@media (max-width:414px) {
+
+    body {
+        width: 100%;
+        height: 900px;
+        margin: 0 auto;
+    }
+    .content {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 90%;
+        height: 90%;
+        border-radius: 20px;
+    }
+        .img-content {
+            background-color: hsl(277, 64%, 61%);
+            height: 40%;
+            width: 100%;
+            order: initial;
+            border-bottom-right-radius: 0px;
+            border-top-left-radius: 15px;
+        }
+        .img-content img {
+            filter:opacity(45%);
+            height: 100%;
+            width: 100%;
+            border-top-right-radius: 15px;
+            border-top-left-radius: 15px;
+        }
+        .texts {
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            background-color: hsl(244, 38%, 16%);
+            width: 100%;
+            height: 60%;
+            order: 2;
+           border-top-left-radius: 0px;
+           border-bottom-right-radius: 15px;
+        }
+        .texts h2, p, .info {
+            background-color: transparent;
+        }
+        .texts h2 {
+           margin: 0 auto;
+           margin-top: 40px;
+            width: 78%;
+            height: 200px;
+            color: hsl(0, 0%, 100%);
+            text-align:center;
+            font-family: 'Inter';
+            font-weight: bold;
+            font-size: 28px;
+        }
+        .texts p {
+            padding: 0;
+            margin: 0 auto;
+            width: 78%;
+            transform: translateY(-60px);
+            text-align: center;
+            font-size: 15px;
+            font-family:"Lexend Deca" ;
+            color: hsla(0, 0%, 100%, 0.75);
+        }   
+        .info {
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            transform: translateY(-40px);
+            justify-content: center;
+            width: 100%;
+            height: 89px;
+
+    }
+    .info div {
+        width: 67px;
+        height: 60px;
+        padding: 0;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+    }
+    .info div h2 {
+        padding: 0;
+        margin-left: 0;
+        font-size: 20px;
+        height: 20px;
+        width: 67px;
+    }
+    .info div p{
+        margin-left: 0;
+        font-size: 12px;
+        height: 20px;
+        width: 75px;
+        text-transform: uppercase;
+        transform: translateY(10px);
+    
+    }
+    .attribution {
+        position: relative;
+        transform: translate(13px,-30px);
+        z-index: 9;
+     color: white;
+    }
+}
